objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Account_number__c</fullName>
        <label>Account number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>(TODAY() - Date_of_Birth__c)/365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <picklist>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipName>students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Have_Vehicle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have Vehicle?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <inlineHelpText>last name of the student</inlineHelpText>
        <label>Last Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Married?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mix_Pct__c</fullName>
        <label>Mix Pct</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Multiple_of_5__c</fullName>
        <label>Multiple of 5</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Email_ID__c</fullName>
        <label>Personal Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wife_Name__c</fullName>
        <label>Wife Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>student ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Marriage</fullName>
        <active>true</active>
        <label>Marriage</label>
    </recordTypes>
    <recordTypes>
        <fullName>unmarried</fullName>
        <active>true</active>
        <label>unmarried</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_number_numeric_if_not_blank</fullName>
        <active>true</active>
        <errorConditionFormula>IF
(NOT(ISBLANK( Account_number__c )),
NOT(ISNUMBER( Account_number__c )),
false)</errorConditionFormula>
        <errorDisplayField>Account_number__c</errorDisplayField>
        <errorMessage>account number should be numeric</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DOB_not_greater_than_today</fullName>
        <active>true</active>
        <errorConditionFormula>Date_of_Birth__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>DOB should not be greater than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_rule</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Mix_Pct__c &lt;=0, Mix_Pct__c &gt;=1)</errorConditionFormula>
        <errorDisplayField>Mix_Pct__c</errorDisplayField>
        <errorMessage>This value can onlu be between 0 and 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_code_format_for_USA</fullName>
        <active>true</active>
        <errorConditionFormula>IF
(
OR(ISPICKVAL( Billing_Country__c,&apos;US&apos;),ISPICKVAL( Billing_Country__c,&apos;USA&apos;)), 
NOT
(
OR
(
REGEX( Billing_Zip_Postal_Code__c , &quot;[0-9]{5}-[0-9]{4}&quot;),
REGEX( Billing_Zip_Postal_Code__c , &quot;[0-9]{5}&quot;)
)
),
false
)</errorConditionFormula>
        <errorDisplayField>Billing_Zip_Postal_Code__c</errorDisplayField>
        <errorMessage>The Zip code should be in proper format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>credit_card_number</fullName>
        <active>true</active>
        <errorConditionFormula>IF
(
NOT(ISBLANK(Credit_Card_Number__c)),
NOT(
OR
(
REGEX(  Credit_Card_Number__c  , &quot;[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}&quot;),
REGEX( Credit_Card_Number__c , &quot;[0-9]{16}&quot;)
)),
false
)</errorConditionFormula>
        <errorDisplayField>Credit_Card_Number__c</errorDisplayField>
        <errorMessage>The credit card number should be in proper format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>multiple_of_5</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(

NOT(ISBLANK( Multiple_of_5__c )),
IF(MOD( Multiple_of_5__c,5)=0,false,true)

)</errorConditionFormula>
        <errorDisplayField>Multiple_of_5__c</errorDisplayField>
        <errorMessage>the value should be a multiple of 5</errorMessage>
    </validationRules>
</CustomObject>